# procworks-release

./: DISCLAIMER.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md
core/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
core/deploy/: docker-compose.yml
core/migrations/: env.py  script.py.mako
core/migrations/versions/: 0001_initial.py  0002_process_instance.py  0003_audit_event.py  0004_org_model.py  0005_user_credential.py  0006_external_task.py  0007_webhook_outbox.py  0008_mail_outbox.py  0009_absence_entry.py  0010_license.py  0011_process_template.py
core/src/procworks/: __init__.py  adhoc.py  api.py  assignment.py  audit.py  auth.py  auth_password.py  auth_token.py  backups.py  bpmn.py  conditions.py  connections.py  dal.py  db.py  demo.py  execution.py  integration_runtime.py  licensing.py  mail_runtime.py  metrics.py  migration.py  model.py  odata.py  operations.py  org.py  outbox.py  store.py  templates.py  validator.py  worklist_priority.py
core/tests/: test_absence.py  test_activity_repository.py  test_adhoc.py  test_api.py  test_assignment.py  test_audit.py  test_auth.py  test_auth_password.py  test_backups.py  test_bpmn.py  test_composition.py  test_concept_extensions_api.py  test_conditions.py  test_connectors.py  test_connectors_odata.py  test_connectors_sql.py  test_core.py  test_dataflow.py  test_db.py  test_demo.py  test_demo_hosting.py  test_deploy_backup_helm_sync.py  test_empty_branch.py  test_execution.py  test_external_tasks.py  test_followup_execution.py  test_forms.py  test_http_push.py  test_integration_inbound.py  test_integration_rules.py  test_licensing.py  test_mail_notification.py  test_mail_outbox.py  test_metrics.py  test_migration.py  test_org.py  test_priority.py  test_resources.py  test_scalar_query.py  test_scalar_query_sql.py  (+10 more)
deploy/: Caddyfile  docker-compose.full.yml
deploy/backup/: Dockerfile  backup-once.sh  run-scheduler.sh
deploy/demo/: Dockerfile  README.md  build-image.sh  d1-proof.sh  fly.toml
deploy/demo/broker/: Dockerfile  app.py  fly.toml  mailer.py  provision.py  requirements.txt  test_broker.py
deploy/demo/landing/: trial-button.html
deploy/demo/reaper/: reaper.py
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/files/backup/: lib.sh  restore.sh  verify.sh
deploy/helm/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  backup-configmap.yaml  backup-cronjob.yaml  backup-pvc.yaml  backup-restore-job.yaml  ingress.yaml  secret.yaml  web-deployment.yaml  web-service.yaml
docs/: Betriebs-Backup-Leitfaden.md  Integrations-Leitfaden.md  Mitarbeiter-Anleitung.md  PITR-Leitfaden.md  Windows-Server-Setup.md
web/: Dockerfile  app.js  index.html  styles.css
web/tour/: engine.js  fixtures.js  tour.css  tours.js
