[project]
name = "procworks"
version = "1.7.0"
description = "Headless, block-structured process engine kernel with correctness-by-construction (ADEPT-/BPMN-inspired)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BUSL-1.1" }
authors = [{ name = "Tobias Häcker" }]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "uvicorn[standard]>=0.29",
    "networkx>=3.2",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "alembic>=1.13",
    # Exercises the licensing signature path in CI (also shipped via the
    # optional ``license`` extra for production enforcement).
    "cryptography>=42",
]
postgres = [
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
]
# Ed25519 verification for the licensing layer (dormant by default). Optional:
# without it, and without a configured licensor public key, licensing stays off.
license = [
    "cryptography>=42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procworks"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends()/require_role() in argument
# defaults on purpose; these calls are evaluated once and are safe (not B008).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "procworks.api.require_role",
    "procworks.api.require_scope",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
